src/test/deca/context/valid/created/miscellaneous/assign_boolean_boolean.deca
// Description :
//    test  assign entre un boolean et un boolean
//
// Resultats :
//		Ok

{
boolean a = true;
boolean b;
b = a;
}
